--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
         "build": "vite build",
         "dev": "vite"
     },
+    "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.28.0"
+    },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.6.3",
         "vite": "^7.0.7"
     }
 }
