Add queued coin claim email notifications for submit approve reject

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,8 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 ACTIVITY_ADMIN_INBOX=
+COIN_CLAIM_EMAIL_ENABLED=true
+COIN_CLAIM_ADMIN_EMAIL=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
