--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
+MAIL_LOG_CHANNEL=stack
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
